# altai-app

./: .gitignore  INSTALL.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.gemini/: config.yaml  styleguide.md
.github/workflows/: ci.yml  isanagent-bump.yml  release.yml
.kilo/plans/: 1784405385295-isanagent-improvements-research.md
docs/: A11Y_AUDIT.md  ALTAI_CLAW_IMPLEMENTATION_PLAN.md  ISANAGENT_PROJECTS.md  isanagent-toolresult-is_error.md
docs/media/: README.md
docs/plans/: 2026-07-18-context-condensing-and-kilocodeignore.md
docs/sample-plugin/.claude-plugin/: plugin.json
docs/sample-plugin/agents/: researcher.md
docs/sample-plugin/commands/: repo-overview.md
docs/sample-plugin/hooks/: hooks.json
docs/sample-plugin/skills/hello-world/: SKILL.md
docs/sample-plugin/skills/run-in-altai/: SKILL.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/altai/: mod.rs
src-tauri/src/altai/agent/: commands.rs  event_journal.rs  mod.rs  runtime.rs  tauri_channel.rs
src-tauri/src/modules/: mcp.rs  mod.rs  net.rs  os_integration.rs  secrets.rs  webview.rs  workspace.rs
src-tauri/src/modules/db/: commands.rs  mod.rs  operations.rs  types.rs
src-tauri/src/modules/fs/: file.rs  grep.rs  isanagentignore.rs  mod.rs  mutate.rs  watch.rs
src-tauri/src/modules/git/: commands.rs  errors.rs  operations.rs  process.rs  types.rs  utils.rs
src-tauri/src/modules/github/: api.rs  commands.rs  config.rs  device.rs  mod.rs  types.rs
src-tauri/src/modules/lsp_install/: download.rs  installer.rs  mod.rs  node_runtime.rs  paths.rs  progress.rs  registry.rs
src-tauri/src/modules/notebook/: mod.rs
src-tauri/src/modules/os_menu/: macos.rs  mod.rs  windows.rs
src-tauri/src/modules/proc/: mod.rs
src-tauri/src/modules/pty/: mod.rs  session.rs  shell_init.rs
src-tauri/src/modules/pty/scripts/: bashrc.bash  init.fish  profile.ps1  zlogin.zsh  zprofile.zsh  zshenv.zsh  zshrc.zsh
src-tauri/src/modules/shell/: mod.rs  session.rs
src/app/: App.tsx
src/components/ai-elements/: chat-markdown.tsx  conversation.tsx  message.tsx  todo-checklist.tsx  tool.tsx
src/components/ui/: resizable.tsx
src/lib/: useRestoreFocusOnReturn.test.ts  useRestoreFocusOnReturn.ts  utils.ts
src/modules/a11y/: LiveRegion.tsx  index.ts  liveRegionStore.ts
src/modules/ai/: config.ts  index.ts
src/modules/ai/components/: AgentRunBridge.tsx  AgentStatusPill.tsx  AgentSwitcher.tsx  AiChat.tsx  AiInputBar.tsx  AiSidePanel.tsx  AiStatusBarControls.tsx  AiToolApproval.tsx  AutomationsPanel.tsx  ChatHistory.tsx  ChatHistoryPanel.tsx  ChatPathLink.tsx  EditApprovalCard.tsx  NotificationInboxPanel.tsx  PaperImport.tsx  PermissionModeSwitcher.tsx  PlanDiffReview.tsx  SelectionAskAi.tsx  TaskRunsPanel.tsx  TodoStrip.tsx  lazy.tsx
src/modules/ai/lib/: agent.ts  agentEventBridge.test.ts  agentEventBridge.ts  agents.ts  backgroundTranscript.ts  compact.ts  composer.test.ts  composer.tsx  isanagentTarget.ts  keyring.ts  native.ts  openChatHref.test.ts  openChatHref.ts  paths.ts  projectInstructions.ts  provider.ts  sessions.ts  slashCommands.test.ts  slashCommands.ts  snippets.ts  todos.ts  transport.ts
src/modules/ai/store/: agentRunsStore.test.ts  agentRunsStore.ts  agentsStore.ts  automationStore.test.ts  automationStore.ts  chatStore.test.ts  chatStore.ts  notificationStore.test.ts  notificationStore.ts  planStore.ts  snippetsStore.ts  todoStore.ts
src/modules/database/: DataGrid.tsx  DatabasePane.tsx  QueryEditor.tsx  index.ts
src/modules/database/lib/: api.ts
src/modules/editor/: EditorBreadcrumb.tsx  EditorPane.tsx  EditorStack.tsx  GitDiffPane.tsx  ImagePreviewPane.tsx  NewEditorDialog.tsx  SplitDiffView.tsx  index.ts
src/modules/editor/lib/: diffViewMode.ts  editorGroups.test.ts  editorGroups.ts  extensions.ts  minimapMarkers.test.ts  minimapMarkers.ts  runFile.ts  useDocument.ts
src/modules/explorer/: ExplorerSearch.tsx  FileExplorer.tsx  OpenWithDialog.tsx  TreeRow.tsx  index.ts
src/modules/explorer/lib/: contextActions.ts  gitDecorations.ts  useFileTree.ts
src/modules/git-history/: GitHistoryPane.tsx
src/modules/git-history/lib/: graph.ts
src/modules/github/: index.ts
src/modules/github/components/: AssignAgentButton.tsx  AssignmentsRail.tsx  CloneFromGitHub.tsx  CommitBox.tsx  CreateItemView.tsx  GitHubItemsPanel.tsx  ItemDetailView.tsx  (+7 more)
src/modules/header/: Header.tsx  SearchInline.tsx
src/modules/lsp/: catalog.ts  client.ts  installer.ts  jsonrpc.ts  manifest.ts  process.ts  types.ts
src/modules/markdown/: MarkdownPreviewPane.tsx
src/modules/mcp/: client.ts  toolName.ts
src/modules/notebook/: ExperimentView.tsx  NotebookCell.tsx  NotebookPane.tsx  NotebookStack.tsx  index.ts
src/modules/preview/: PreviewAddressBar.tsx  PreviewPane.tsx  PreviewStack.tsx  WebviewStack.tsx  index.ts
src/modules/settings/: openSettingsWindow.ts  store.ts
src/modules/shortcuts/: ShortcutsDialog.tsx  shortcuts.test.ts  shortcuts.ts
src/modules/sidebar/: SidebarRail.tsx
src/modules/source-control/: BranchSwitcher.tsx  PublishToGitHubDialog.tsx  SourceControlPanel.tsx  index.ts  useSourceControlPanel.ts
src/modules/statusbar/: CwdBreadcrumb.tsx  StatusBar.tsx
src/modules/tabs/: TabBar.tsx  index.ts
src/modules/terminal/: TerminalPane.tsx  TerminalPanelHeader.tsx  runInTerminal.ts
src/modules/theme/: ThemeProvider.tsx
src/modules/updater/: UpdaterDialog.tsx  useUpdater.ts
src/modules/workspace/: WorkspaceGate.tsx  WorkspaceWelcome.tsx  folder.ts
src/settings/: SettingsApp.tsx  SettingsContent.tsx  SettingsStack.tsx  main.tsx
src/settings/components/: ProviderIcon.tsx  SectionHeader.tsx
src/settings/sections/: AboutSection.tsx  AccessibilitySection.tsx  AgentsSection.tsx  GeneralSection.tsx  GitHubSection.tsx  LanguageServersSection.tsx  McpSection.tsx  ModelsSection.tsx  ProjectIntelligenceSection.tsx  ShortcutsSection.tsx  SkillsSection.tsx
src/styles/: globals.css
(+16 files in other folders)
