[package]
name = "altai"
version = "0.5.964"
description = "ALTAI — local-first, open-source workspace for AI coding agents"
authors = ["ALTAI Dev Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/altaidevorg/altai-app"

[lib]
name = "altai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
dirs = "5"
log = "0.4"
ignore = "0.4"
# Real-time filesystem watching for the file explorer (live tree refresh).
notify = "6"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
globset = "0.4"
shared_child = "1"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
bytes = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
# LSP installer — checksum + archive extraction for downloaded language servers.
sha2 = "0.10"
flate2 = "1"
hex = "0.4"
tar = "0.4"
base64 = "0.22"
pdf-extract = "0.12"

# İsanAgent — embedded as Rust crate (direct API, no sidecar)
# Pinned to the merged upstream baseline for opaque ALTAI chat IDs (#64),
# channel-scoped inbox queries (#65), atomic clarification resumption (#66),
# session-bound cron operations (#67), cron actor reload (#68), and PDF
# document attachments (#69).
isanagent = { git = "https://github.com/altaidevorg/isanagent.git", rev = "b8357d60fe634bb9dd5d77fabb3c4d2d516bdd48" }
tauri-plugin-single-instance = "2"
tauri-plugin-cli = "2"
tauri-plugin-deep-link = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-registry = "0.5"
keyring = { version = "3.6", default-features = false, features = ["windows-native"] }
windows-sys = { version = "0.59", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_JobObjects",
	"Win32_System_Threading",
] }
# Higher-level COM bindings for the taskbar Jump List (ICustomDestinationList,
# IShellLinkW, IObjectCollection, PKEY_Title). Coexists with windows-sys above.
windows = { version = "0.62", features = [
	"Win32_Foundation",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Variant",
	"Win32_UI_Shell",
	"Win32_UI_Shell_Common",
	"Win32_UI_Shell_PropertiesSystem",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# AppKit bindings for the Dock menu ([NSApp setDockMenu:]). Tauri has no
# high-level API for this; objc2 is already in the lockfile via tao/wry.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
	"NSApplication",
	"NSMenu",
	"NSMenuItem",
	"NSResponder",
] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
# Reads/writes the app bundle's Info.plist so ALTAI can declare itself a
# handler for `public.item` (all files) and `public.folder`, which makes it
# appear in Finder's "Open With" submenu on macOS.
plist = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true
